--- a/challenge_miashs_2022/notebooks/model.ipynb
+++ b/challenge_miashs_2022/notebooks/model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -10,6 +17,13 @@
     "from tensorflow.keras import layers\n",
     "import tfimm\n",
     "import tensorflow_datasets as tfds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Path generation"
    ]
   },
   {
@@ -28,6 +42,7 @@
    "source": [
     "import pathlib\n",
     "data_dir = pathlib.Path(r\"C:\\Users\\lulu5\\Documents\\dataset\")\n",
+    "#Nombre images\n",
     "image_count = len(list(data_dir.glob('*/*.jpg')))\n",
     "print(image_count)"
    ]
