--- a/challenge_miashs_2022/notebooks/model.ipynb
+++ b/challenge_miashs_2022/notebooks/model.ipynb
@@ -43,7 +43,7 @@
    ],
    "source": [
     "import pathlib\n",
-    "data_dir = pathlib.Path(r\"C:\\Users\\lulu5\\Documents\\dataset\")\n",
+    "data_dir_train = pathlib.Path(r\"C:\\Users\\lulu5\\Documents\\train\")\n",
     "#Nombre images\n",
     "image_count = len(list(data_dir.glob('*/*.jpg')))\n",
     "print(image_count)"
@@ -83,6 +83,26 @@
     "       # ...\n",
     "       }\n",
     "datagen = ImageDataGenerator(**TFs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_generator = datagen.flow_from_directory(\n",
+    "    \"../data/train\",\n",
+    "    color_mode=\"rgb\",\n",
+    "    target_size=target_size,\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='categorical')\n",
+    "\n",
+    "test_flow = datagen.flow_from_directory(\n",
+    "    \"../data/valid\", class_mode='categorical', \n",
+    "    color_mode=\"rgb\",                            \n",
+    "    target_size=target_size, \n",
+    "    batch_size=batch_size)"
    ]
   },
   {
