--- a/challenge_miashs_2022/notebooks/model.ipynb
+++ b/challenge_miashs_2022/notebooks/model.ipynb
@@ -30,28 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2072\n"
+      "2072 245\n"
      ]
     }
    ],
    "source": [
     "import pathlib\n",
     "data_dir_train = pathlib.Path(r\"C:\\Users\\lulu5\\Documents\\train\")\n",
+    "data_dir_test = pathlib.Path(r\"C:\\Users\\lulu5\\Documents\\test\")\n",
     "#Nombre images\n",
-    "image_count = len(list(data_dir.glob('*/*.jpg')))\n",
-    "print(image_count)"
+    "image_count_train = len(list(data_dir_train.glob('*/*.jpg')))\n",
+    "image_count_test = len(list(data_dir_test.glob('*/*.jpg')))\n",
+    "print(image_count_train, image_count_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,44 +89,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_generator = datagen.flow_from_directory(\n",
-    "    \"../data/train\",\n",
-    "    color_mode=\"rgb\",\n",
-    "    target_size=target_size,\n",
-    "    batch_size=batch_size,\n",
-    "    class_mode='categorical')\n",
-    "\n",
-    "test_flow = datagen.flow_from_directory(\n",
-    "    \"../data/valid\", class_mode='categorical', \n",
-    "    color_mode=\"rgb\",                            \n",
-    "    target_size=target_size, \n",
-    "    batch_size=batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2072 images belonging to 10 classes.\n"
+      "Found 2072 images belonging to 10 classes.\n",
+      "Found 245 images belonging to 1 classes.\n"
      ]
     }
    ],
    "source": [
-    "batches = datagen.flow_from_directory(data_dir,\n",
-    "                                      class_mode='binary',\n",
-    "                                      target_size=(img_height, img_width),\n",
-    "                                      color_mode=\"rgb\",\n",
-    "                                      shuffle=True,\n",
-    "                                      batch_size=batch_size)"
+    "train_generator = datagen.flow_from_directory(\n",
+    "    data_dir_train,\n",
+    "    color_mode=\"rgb\",\n",
+    "    batch_size=batch_size,\n",
+    "    target_size=(img_height, img_width),\n",
+    "    shuffle=True,\n",
+    "    class_mode='binary')\n",
+    "\n",
+    "test_flow = datagen.flow_from_directory(\n",
+    "    data_dir_test,\n",
+    "    color_mode=\"rgb\",\n",
+    "    batch_size=batch_size,\n",
+    "    target_size=(img_height, img_width),\n",
+    "    shuffle=True,\n",
+    "    class_mode='binary')"
    ]
   },
   {
@@ -295,11 +287,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lulu5\\anaconda3\\lib\\site-packages\\keras_preprocessing\\image\\image_data_generator.py:720: UserWarning: This ImageDataGenerator specifies `featurewise_center`, but it hasn't been fit on any training data. Fit it first by calling `.fit(numpy_data)`.\n",
+      "  warnings.warn('This ImageDataGenerator specifies '\n",
+      "C:\\Users\\lulu5\\anaconda3\\lib\\site-packages\\keras_preprocessing\\image\\image_data_generator.py:728: UserWarning: This ImageDataGenerator specifies `featurewise_std_normalization`, but it hasn't been fit on any training data. Fit it first by calling `.fit(numpy_data)`.\n",
+      "  warnings.warn('This ImageDataGenerator specifies '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "34/65 [==============>...............] - ETA: 3:20 - loss: 0.3439 - accuracy: 0.9108 - sparse_top_k_categorical_accuracy: 0.9926"
+     ]
+    }
+   ],
    "source": [
-    "history = model_classi.fit(batches, epochs=2, validation_data=gen_val, batch_size=BATCH_SIZE, verbose=1,  callbacks=[lrate])"
+    "history = model.fit(train_generator, epochs=2, validation_data=test_flow, batch_size=batch_size, verbose=1)"
    ]
   },
   {
