--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1077,6 +1077,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.losses "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
    "outputs": [],
