--- a/notebooks/model_V1bis.ipynb
+++ b/notebooks/model_V1bis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15603\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pathlib\n",
     "dataset = pathlib.Path(r\"C:\\Users\\lulu5\\Documents\\echantillon_1\")\n",
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,20 +51,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 15603 files belonging to 1081 classes.\n",
-      "Using 12483 files for training.\n",
-      "Found 15603 files belonging to 1081 classes.\n",
-      "Using 3120 files for validation.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "TFs = {#'height_shift_range':  .5,\n",
+    "       \"horizontal_flip\": True,\n",
+    "       \"vertical_flip\": True,\n",
+    "       \"rotation_range\": 30,\n",
+    "       \"featurewise_std_normalization\": True,\n",
+    "       \"brightness_range\": (1, 1.5),\n",
+    "       \"shear_range\":0.2\n",
+    "       # other transformation your want\n",
+    "       # ...\n",
+    "       }\n",
+    "#datagen = ImageDataGenerator(**TFs, validation_split=0.2)\n",
+    "datagen = ImageDataGenerator(**TFs, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
     "  dataset,\n",
@@ -81,12 +89,31 @@
     "  subset=\"validation\",\n",
     "  seed=123,\n",
     "  image_size=(img_height, img_width),\n",
-    "  batch_size=batch_size)"
+    "  batch_size=batch_size)\n",
+    "\n",
+    "\n",
+    "train_generator = datagen.flow_from_directory(\n",
+    "    dataset,\n",
+    "    color_mode=\"rgb\",\n",
+    "    batch_size=batch_size,\n",
+    "    subset = \"training\",\n",
+    "    target_size=(img_height, img_width),\n",
+    "    shuffle=True,\n",
+    "    class_mode='binary')\n",
+    "\n",
+    "validation_generator = datagen.flow_from_directory(\n",
+    "    dataset,\n",
+    "    color_mode=\"rgb\",\n",
+    "    batch_size=batch_size,\n",
+    "    subset = \"validation\",\n",
+    "    target_size=(img_height, img_width),\n",
+    "    shuffle=True,\n",
+    "    class_mode='binary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,18 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(128, 224, 224, 3)\n",
-      "(128,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for image_batch, labels_batch in train_ds:\n",
     "  print(image_batch.shape)\n",
@@ -139,7 +157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,78 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_V1_augmented.save_weights(checkpoint_path.format(epoch=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_3\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " sequential_2 (Sequential)   (None, 224, 224, 3)       0         \n",
-      "                                                                 \n",
-      " model_V1 (Functional)       (None, 2048)              23587712  \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 23,587,712\n",
-      "Trainable params: 0\n",
-      "Non-trainable params: 23,587,712\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_V1_augmented.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from focal_loss import SparseCategoricalFocalLoss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(optimizer=\"Adam\", \n",
     "        loss=SparseCategoricalFocalLoss(gamma=5),\n",
-    "        metrics=['accuracy', 'sparse_top_k_categorical_accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "25/98 [======>.......................] - ETA: 8:10 - loss: 15.2153 - accuracy: 0.0053 - sparse_top_k_categorical_accuracy: 0.0253"
-     ]
-    }
-   ],
-   "source": [
-    "epochs = 10\n",
+    "        metrics=['accuracy', 'sparse_top_k_categorical_accuracy'])\n",
+    "\n",
     "history = model.fit(\n",
     "  train_ds,\n",
     "  validation_data=val_ds,\n",
@@ -265,21 +235,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'history' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-ab192aeb141e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0macc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhistory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'accuracy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mval_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhistory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'val_accuracy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhistory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'loss'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mval_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhistory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'val_loss'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'history' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#model_V1_augmented.save_weights(checkpoint_path.format(epoch=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_V1_augmented.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from focal_loss import SparseCategoricalFocalLoss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=\"Adam\", \n",
+    "        loss=SparseCategoricalFocalLoss(gamma=5),\n",
+    "        metrics=['accuracy', 'sparse_top_k_categorical_accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "epochs = 10\n",
+    "history = model.fit(\n",
+    "  train_ds,\n",
+    "  validation_data=val_ds,\n",
+    "  epochs=epochs,\n",
+    "  callbacks=[cp_callback]\n",
+    ")\n",
+    "*/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unoptimized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_unoptimized = tf.keras.applications.resnet50.ResNet50(\n",
+    "    include_top=True, weights=None, input_tensor=None,\n",
+    "    input_shape=None, pooling=None, classes=number_class)\n",
+    "\n",
+    "model_unoptimized.compile(optimizer=\"Adam\", \n",
+    "        loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "        metrics=['accuracy', 'sparse_top_k_categorical_accuracy'])\n",
+    "\n",
+    "model_unoptimized.fit(train_generator, validation_data=validation_generator,epochs=epochs,batch_size=batch_size, verbose=1,\n",
+    "steps_per_epoch=3, validation_steps=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_unoptimized.compile(optimizer=\"Adam\", \n",
+    "        loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "        metrics=['accuracy', 'sparse_top_k_categorical_accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "acc = history.history['accuracy']\n",
     "val_acc = history.history['val_accuracy']\n",
@@ -303,13 +352,6 @@
     "plt.title('Training and Validation Loss')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
