--- a/notebooks/model_test.ipynb
+++ b/notebooks/model_test.ipynb
@@ -180,7 +180,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/3 [===================>..........] - ETA: 32s - loss: 8.2655 - accuracy: 0.0078 - sparse_top_k_categorical_accuracy: 0.0117     "
+      "3/3 [==============================] - 124s 41s/step - loss: 8.3446 - accuracy: 0.0052 - sparse_top_k_categorical_accuracy: 0.0104 - val_loss: 791.2019 - val_accuracy: 0.0000e+00 - val_sparse_top_k_categorical_accuracy: 0.8828\n",
+      "Epoch 2/10\n",
+      "3/3 [==============================] - 122s 42s/step - loss: 7.8638 - accuracy: 0.0052 - sparse_top_k_categorical_accuracy: 0.0234 - val_loss: 15948.5312 - val_accuracy: 0.0000e+00 - val_sparse_top_k_categorical_accuracy: 1.0000\n",
+      "Epoch 3/10\n",
+      "3/3 [==============================] - 135s 46s/step - loss: 7.2311 - accuracy: 0.0052 - sparse_top_k_categorical_accuracy: 0.0182 - val_loss: 9995.0254 - val_accuracy: 0.0156 - val_sparse_top_k_categorical_accuracy: 1.0000\n",
+      "Epoch 4/10\n",
+      "3/3 [==============================] - 110s 37s/step - loss: 6.5350 - accuracy: 0.0052 - sparse_top_k_categorical_accuracy: 0.0312 - val_loss: 1513.8801 - val_accuracy: 0.0156 - val_sparse_top_k_categorical_accuracy: 1.0000\n",
+      "Epoch 5/10\n",
+      "1/3 [=========>....................] - ETA: 1:08 - loss: 6.3783 - accuracy: 0.0156 - sparse_top_k_categorical_accuracy: 0.0391"
      ]
     }
    ],
