--- a/notebooks/model_test.ipynb
+++ b/notebooks/model_test.ipynb
@@ -284,6 +284,15 @@
     ")\n",
     "print(\"Execution time:\", time.perf_counter() - start_time)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_V1_augmented.fit()"
+   ]
   }
  ],
  "metadata": {
