--- a/torch/model.ipynb
+++ b/torch/model.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import timm\n",
     "import torch\n",
+    "import torchvision\n",
     "from timm.optim.optim_factory import create_optimizer\n",
     "from types import SimpleNamespace\n",
     "from timm.data.transforms_factory import create_transform\n",
@@ -16,6 +17,33 @@
     "from torch.optim.lr_scheduler import MultiStepLR\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Compose(\n",
+       "    RandomResizedCropAndInterpolation(size=(224, 224), scale=(0.08, 1.0), ratio=(0.75, 1.3333), interpolation=bilinear)\n",
+       "    RandomHorizontalFlip(p=0.5)\n",
+       "    RandomVerticalFlip(p=0.4)\n",
+       "    ColorJitter(brightness=[0.6, 1.4], contrast=[0.6, 1.4], saturation=[0.6, 1.4], hue=None)\n",
+       "    ToTensor()\n",
+       "    Normalize(mean=tensor([0.4850, 0.4560, 0.4060]), std=tensor([0.2290, 0.2240, 0.2250]))\n",
+       ")"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_transform(input_size=224, is_training=True, no_aug=False, hflip=0.5, vflip=0.4)"
    ]
   },
   {
@@ -43,6 +71,54 @@
     "dataset = ImageDataset(r\"C:\\Users\\lulu5\\Documents\\echantillon_2\", \n",
     "                       transform=create_transform_custom)\n",
     "loader = DataLoader(dataset, batch_size=100, shuffle=True, num_workers=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lulu5\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:478: UserWarning: This DataLoader will create 16 worker processes in total. Our suggested max number of worker in current system is 8 (`cpuset` is not taken into account), which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+      "  warnings.warn(_create_warning_msg(\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataiter = iter(loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images, labels = dataiter.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.pyplot import imshow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_grid = torchvision.utils.make_grid(images)\n",
+    "\n",
+    "# show images\n",
+    "imshow(img_grid, one_channel=True)"
    ]
   },
   {
